<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chapter3interface.MainActivity"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_layout" />
    <Button 
        android:id="@+id/btn_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linear_layout"
        />
    <Button 
        android:id="@+id/btn_absolute_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/absolute_layout"
        />
    <Button 
        android:id="@+id/btn_table_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/table_layout"
        />
    <Button 
        android:id="@+id/btn_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relative_layout"
        />
    <Button 
        android:id="@+id/btn_frame_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frame_layout"
        />
    <Button 
        android:id="@+id/btn_scroll_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scroll_layout"
        />

</LinearLayout>
